k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: k8s-app
  template:
    metadata:
      labels:
        app: k8s-app
    spec:
      containers:
        - name: k8s-app
          image: umerjidda/k8s-app:v1
          ports:
            - containerPort: 3000
