k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-app-service
  namespace: default 
spec:
  type: NodePort
  selector:
    app: k8s-app
  ports:
    - port: 80
      targetPort: 3000
      nodePort: 30008
