k8s/allow-app-traffic.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-app
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: k8s-app
  ingress:
  - from:
    - podSelector: {}
  policyTypes:
  - Ingress
